--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         Author: <input type="text" id="postAuthor"><br>
         <input type="submit">
       </form>
+      <div id="posts"></div>
     </main>
     
     <script src="lodash.min.js"></script>
